initialized container component for utilizing api

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,4 +1,9 @@
 .formstyle {
-    margin: 8% 0;
-    text-align: center;
+  margin: 8% 0;
+  text-align: center;
+}
+@media (min-width: 767.6px) {
+  .textfield-style {
+    width: 50%;
   }
+}
