updated ui style

--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -2,3 +2,9 @@
   margin-top: 15%;
   text-align: center;
 }
+@media (max-width: 767.5px) {
+  .contain {
+    margin-top: 40%;
+    text-align: center;
+  }
+}
