--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -2,9 +2,17 @@
   margin-top: 15%;
   text-align: center;
 }
+
+.spinner {
+  margin-top: 3%;
+}
+
 @media (max-width: 767.5px) {
   .contain {
     margin-top: 40%;
     text-align: center;
+  }
+  .spinner {
+    margin-top: 8%;
   }
 }
