--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,8 @@
-.container-fluid {
+.container {
   padding: 3% 15% 7%;
 }
 @media (max-width: 767.5px) {
-  .container-fluid {
+  .container {
     padding: 7% 0 0;
   }
 }
